examples/misc/error/compilation/parser_2.bfr
// 複数行にわたるトークン
let "uwaaaaaaa
aaaaaa
aaa"